<resources>
    <string name="app_name">Capstone Project</string>
    <string name="title_activity_map">Place Picker</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="pref_location_key">Preferred Location Key</string>
    <string name="pref_location_label">Preferred Location</string>
    <string name="pref_location_default">Default Location</string>
    <string name="radius_dialog_message">Drag to select radius</string>
    <string name="radius_units">km</string>
    <string name="radius_dialog_title">Search Radius</string>
    <string name="radius_seekbar_key">Radius Seekbar key</string>
    <string name="radius_default">2</string>
    <string name="settings_toolbar_title">Settings</string>
    <string name="amusement_parks">Amusement Parks</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="doctor">Doctor</string>
    <string name="restaurant">Restaurant</string>
    <string name="bakery">Bakery</string>
    <string name="cafe">Cafe</string>
    <string name="casinos">Casinos</string>
    <string name="night_clubs">Night Clubs</string>
    <string name="car_wash">Car Wash</string>
    <string name="car_repair">Car Repair</string>
    <string name="car_dealer">Car Dealer</string>
    <string name="car_rental">Car Rental</string>
    <string name="essentials">Essentials</string>
    <string name="food">Food</string>
    <string name="fun">Fun</string>
    <string name="auto">Auto</string>
    <string name="call_this_place">Call this place</string>
    <string name="get_directions_for_this_place">Get Directions for this place</string>
    <string name="website_for_this_place">Website for this Place</string>
    <string name="action_favorites">Favorite Places</string>
    <string name="action_sort_by_rating">Rating</string>
    <string name="action_sort_by_distance">Distance</string>
    <string name="sort_by_group">Sort by</string>
    <string name="favorites_toolbar_title">Favorite Places</string>
    <string name="action_sort_by_default">Default</string>
    <string name="widget_ingredients">Ingredients</string>
    <string name="navigation_view_explanation_text">Please select one of below categories to see relevant places</string>
    <string name="place_name">Place Name</string>
    <string name="place_favorite">Place Favorite</string>
    <string name="not_connected">Not connected to Internet.</string>
    <string name="places_load_failed">Places load failed</string>
    <string name="operation_failed">Operation failed</string>
    <string name="select_location">Please select a location in Settings</string>
    <string name="phone_empty">Phone number empty</string>
    <string name="website_empty">No Website linked</string>
    <string name="no_website_to_share">No Website linked to share</string>

</resources>
