<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="Location Setting"
        android:key="pref_key_location_settings" >

        <Preference
            android:key="@string/pref_location_key"
            android:title="@string/pref_location_label"
            android:inputType="textPostalAddress"
            android:summary="@string/pref_location_default"
            android:defaultValue="@string/pref_location_default"/>

        <com.bharadwaj.android.capstoneproject.SeekBarPreference
            android:defaultValue="@string/radius_default"
            android:dialogMessage="@string/radius_dialog_message"
            android:key="@string/radius_seekbar_key"
            android:max="50"
            android:text="@string/radius_units"
            android:title="@string/radius_dialog_title" />

    </PreferenceCategory>


</PreferenceScreen>