<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/sort_by_group"
        app:showAsAction="always|withText">
        <menu>
            <group android:id="@+id/sort_by_group">

                <item
                    android:id="@+id/action_sort_by_distance"
                    android:orderInCategory="20"
                    android:title="@string/action_sort_by_distance"
                    app:showAsAction="ifRoom" />
                <item
                    android:id="@+id/action_sort_by_default"
                    android:orderInCategory="30"
                    android:title="@string/action_sort_by_default"
                    app:showAsAction="ifRoom" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/action_favorites"
        android:orderInCategory="40"
        android:title="@string/action_favorites"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="50"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>
