<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/place_name"
        style="@style/placeNameTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceListItem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/place_share_button"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_menu_share"
        app:layout_constraintEnd_toStartOf="@id/place_favorite"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/place_favorite"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_favorite_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/place_rating"
        style="@style/placeRatingTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceListItem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/place_name" />

    <RatingBar
        android:id="@+id/rating_bar"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:isIndicator="true"
        android:numStars="5"
        app:layout_constraintBottom_toTopOf="@id/place_address"
        app:layout_constraintStart_toEndOf="@+id/place_rating"
        app:layout_constraintTop_toBottomOf="@+id/place_name" />

    <TextView
        android:id="@+id/place_price_level"
        style="@style/placePriceLevelTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/place_address"
        app:layout_constraintStart_toEndOf="@+id/rating_bar"
        app:layout_constraintTop_toBottomOf="@+id/place_name"/>

    <TextView
        android:id="@+id/place_address"
        style="@style/placeAddressTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceListItem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/place_rating" />

    <View
        android:id="@+id/saperator_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@+id/place_address"/>

    <LinearLayout
        android:id="@+id/place_button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saperator_1">

        <ImageButton
            android:id="@+id/place_call_button"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/call_this_place"
            android:src="@drawable/ic_call" />

        <ImageButton
            android:id="@+id/place_maps_button"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/get_directions_for_this_place"
            android:src="@drawable/ic_directions_car" />

        <ImageButton
            android:id="@+id/place_website_button"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/website_for_this_place"
            android:src="@drawable/ic_business" />

    </LinearLayout>

    <View
        android:id="@+id/saperator_2"
        style="@style/SaperatorStyle"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@+id/place_button_layout"/>

</android.support.constraint.ConstraintLayout>
